[package]
name = "daemon-ui"
authors = ["Nathan Lilienthal <nathan@nixpulvis.com>"]
categories = ["wasm"]
description = "Personal life management UI"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/nixpulvis/daemon"
version = "0.0.1"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
daemon-core = { path = "../daemon-core" }
wasm-bindgen = "*"
comrak = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

[dependencies.web-sys]
version = "*"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
]
